#1000 Make ETL_TYPEDEF Trivially Copyable
#1017 etl::max_element has undefined behavior if the range is empty
#1016 Allow compile time CRC calculation
#1019 UB when passing a temporary lambda to a delegate
#1022 Request: Add option to disable non-lock-free atomics - Added is_always_lock_free member constant to etl::atomic
#1030 Modify etl::message_packet to not require polymorphic messages

Pull Requests:
#947  Remove unused git submodule config
#965  Fix accident creation of a delegate to an rvalue delegate when copying/assigning from delegate with mismatching signature
#985  Add uncopyable.h, class uncopyable
#986  Added const iterators to span
#989  Packed unaligned_type
#990  Add contains() method to etl::unordered_map and etl::unordered_set
#992  Return reference from emplace() in etl::queue
#999  Add at_address() to etl::unaligned_type. Added etl::unaligned_type_ext instead at_address()
#1001 Add max_item_size() to etl::ipool
#1002 Add singleton_base
#1005 Fixed memory.h: mem_copy, mem_move, mem_compare for pointers to const
#1006 Fix arm64 signed char
#1007 Fix fixed extent span empty()
#1021 Some minor cleanup changes
#1014 Added missing rational arithmetic functions from <ratio>
#1027 Add etl::make_span()

===============================================================================
20.39.4

#948 Bug in queue pop can break queue.empty()
     Also included etl::stack in the fix.
#949 For GCC10, we should check __cplusplus >= 201709L when determining if c++20 is supported

===============================================================================
20.39.3

Updates:
Removed C++11 restriction on etl::observer::notification

Fixes:
#917 unaligned_type doesn't compile with floating point types
#923 Missing equality operator for class expected
#930 Unused parameter warnings

Pull Requests:
#946 Make include paths to private files relative

===============================================================================
20.39.2
