@@ -1091,9 +1091,9 @@ namespace
 
       bool is_equal = Equal(initial_text, text);
       CHECK(is_equal);
-    #if ETL_HAS_STRING_TRUNCATION_CHECKS
+#if ETL_HAS_STRING_TRUNCATION_CHECKS
       CHECK(!text.is_truncated());
-    #endif
+#endif
     }
 
     //*************************************************************************
@@ -1114,21 +1114,6 @@ namespace
 #if ETL_HAS_STRING_TRUNCATION_CHECKS
       CHECK(!text.is_truncated());
 #endif
-    }
-
-    //*************************************************************************
-    TEST_FIXTURE(SetupFixture, test_self_assign_view)
-    {
-      Text text(initial_text.c_str());
-      View view(text);
-
-      text.assign(view);
-
-      bool is_equal = Equal(initial_text, text);
-      CHECK(is_equal);
-    #if ETL_HAS_STRING_TRUNCATION_CHECKS
-      CHECK(!text.is_truncated());
-    #endif
     }
 
     //*************************************************************************
