@@ -1098,6 +1098,20 @@ namespace
     }
 
     //*************************************************************************
+    TEST_FIXTURE(SetupFixture, test_self_assign_string)
+    {
+      Text text(initial_text.c_str());
+
+      text.assign(text);
+
+      bool is_equal = Equal(initial_text, text);
+      CHECK(is_equal);
+#if ETL_HAS_STRING_TRUNCATION_CHECKS
+      CHECK(!text.is_truncated());
+#endif
+    }
+
+    //*************************************************************************
     TEST_FIXTURE(SetupFixture, test_assign_view)
     {
       TextSTD compare_input(initial_text.c_str());
